--- a/src/App.css
+++ b/src/App.css
@@ -176,7 +176,7 @@
   font-size: 18px;
   font-weight: 600;
   font-family: 'Geist Mono', monospace;
-  margin-bottom: 0.7rem;
+  margin-bottom: 1.3rem;
   letter-spacing: -0.01em;
   display: flex;
   align-items: center;
@@ -206,16 +206,16 @@
 .desc {
   color: #fff;
   font-size: 16px;
-  max-width: 600px;
+  max-width: 550px;
   text-align: left;
-  line-height: 1.2;
-  margin-bottom: 1.1rem;
+  line-height: 1.5;
+  margin-bottom: 1.3rem;
 }
 .desc p {
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.8em 0;
   color: #fff;
   font-size: 16px;
-  line-height: 1.2;
+  line-height: 1.5;
 }
 
 .link {
@@ -262,6 +262,7 @@
   align-items: flex-start;
   width: 100%;
   max-width: 500px;
+  margin-left: .1rem;
   margin-top: 0.7rem;
   margin-bottom: 0.7rem;
   border-top: 1px dashed #222;
